[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaxion"
version = "1.0.0"
dependencies = [
    "numpy",
    "scikit-learn", 
    "matplotlib",
    "typing_extensions",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyaxion*"]
namespaces = false